--- a/app/templates/home/index.html.twig
+++ b/app/templates/home/index.html.twig
@@ -6,22 +6,202 @@
 
 {% block main %}
     <section id="app-content">
-
         <div class="content-body">
+
             <div class="page-header">
                 <div class="box-layout">
                     <div class="col-xs-5 col-sm-6 col-md-5 va-m">
-                        <h3 class="pull-left">DASHBOARD</h3>
+                        <h3 class="pull-left">Dashboard</h3>
+                        <div class="col-xs-2 text-right pull-left">
+                        </div>
                     </div>
+                    <div class="col-xs-7 col-sm-6 col-md-7 va-m">
+                        <div class="toolbar text-right" id="toolbar">
+                            <div class="std-toolbar btn-group"><a class="btn btn-default btn-nospin" href=""
+                                                                  onclick="Mautic.saveDashboardLayout('Entrer un nom pour ce tableau de bord :');"
+                                                                  data-toggle=""><span><i class="fa fa-save"></i> <span
+                                                class="hidden-xs hidden-sm">Save</span></span></a>
+                                <button type="button" class="btn btn-default btn-nospin dropdown-toggle"
+                                        data-toggle="dropdown" aria-expanded="false"><i class="fa fa-caret-down"></i>
+                                </button>
+                                <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                                    <li>
+                                        <a class="  -nospin" href="" onclick="" data-toggle=""><span><i
+                                                        class="fa fa-cloud-download"></i> <span>Export</span></span></a>
+                                    </li>
+
+                                    <li>
+                                        <a class="  -nospin" data-toggle="ajaxmodal" data-target="#MauticSharedModal"
+                                           href="" data-header="Ajouter un widget"><span><i
+                                                        class="fa fa-plus"></i> <span>Ajouter un widget</span></span></a>
+                                    </li>
+
+                                    <li>
+                                        <a class=" " href="" data-header="Importer"
+                                           data-toggle="ajax"><span><i
+                                                        class="fa fa-cloud-upload"></i> <span>Importer</span></span></a>
+                                    </li>
+
+                                </ul>
+                            </div>
+                            <div class="toolbar-bundle-buttons pull-left"></div>
+                            <div class="toolbar-form-buttons hide pull-right">
+                                <div class="btn-group toolbar-standard hidden-xs hidden-sm "></div>
+                                <div class="btn-group toolbar-dropdown hidden-md hidden-lg">
+                                    <button type="button" class="btn btn-default btn-main"></button>
+                                    <button type="button" class="btn btn-default btn-nospin  dropdown-toggle"
+                                            data-toggle="dropdown" aria-expanded="false"><i
+                                                class="fa fa-caret-down"></i></button>
+                                    <ul class="dropdown-menu dropdown-menu-right" role="menu"></ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+
+                    </div>
+
                 </div>
             </div>
-            <div class="panel panel-default bdr-t-wdh-0 mb-0">
-                <div class="panel-body">
-                    <div class="box-layout">
-                    </div>
+            <div class="row pt-md pl-md">
+                <div class="col-sm-6">
+
+                    <form novalidate="" autocomplete="false" data-toggle="ajax" role="form" name="daterange"
+                          method="post" action="" class="form-filter " style="max-width: 380px">
+                        <div class="input-group">
+        <span class="input-group-addon">
+            <label class="control-label" for="daterange_date_from">From</label>        </span>
+                            <input type="text" id="daterange_date_from" name="daterange[date_from]" class="form-control"
+                                   autocomplete="false" value="Jul 13, 2022"> <span class="input-group-addon"
+                                                                                    style="border-left: 0;border-right: 0;">
+            <label class="control-label" for="daterange_date_to">To</label>        </span>
+                            <input type="text" id="daterange_date_to" name="daterange[date_to]" class="form-control"
+                                   autocomplete="false" value="Aug 13, 2022"> <span class="input-group-btn">
+            <button type="submit" id="daterange_apply" name="daterange[apply]" class="btn btn-default">
+        Apply</button>        </span>
+                        </div>
+                        <input type="hidden" id="daterange__token" name="daterange[_token]" autocomplete="false"
+                               value="p0LsSmp8pX_8_6Tl6O9BouMnHjlOvXX393YC2JHJSeQ"></form>
                 </div>
             </div>
 
+            <div id="dashboard-widgets" class="dashboard-widgets cards ui-sortable">
+                <div class="card-flex widget" data-widget-id="1" style="width: 100%; height: 330px">
+
+                    <div class="card" style="height: 320px">
+                        <div class="card-header">
+                            <h4 class="ui-sortable-handle">Applications created</h4>
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-haspopup="true"
+                                   aria-expanded="false">
+                                    <i class="fa fa-ellipsis-v"></i>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-right">
+                                    <li>
+                                        <a href="" data-toggle="ajaxmodal"
+                                           data-target="#MauticSharedModal" data-header="Editer le widget">
+                                            <i class="fa fa-pencil"></i> Edit
+                                        </a>
+                                    </li>
+                                    <li role="separator" class="divider"></li>
+                                    <li class="dropdown-header">
+                                        Données chargées en 11.6 ms
+                                    </li>
+                                    <li class="dropdown-header">
+                                        depuis la base de données
+                                    </li>
+                                    <li role="separator" class="divider"></li>
+                                    <li>
+                                        <a href="/s/dashboard/delete/1" data-header="Supprimer le widget"
+                                           class="remove-widget">
+                                            <i class="fa fa-remove"></i> Remove
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <div class="chart-wrapper">
+                                <div class="pt-sd pr-md pb-md pl-md">
+                                    <div style="height:250px">
+                                        <iframe class="chartjs-hidden-iframe" tabindex="-1"
+                                                style="width: 100%; display: block; border: 0px; height: 0px; margin: 0px; position: absolute; inset: 0px;"></iframe>
+                                        <canvas class="chart line-chart chart-rendered" width="1083" height="250"
+                                                style="display: block; width: 1083px; height: 250px;">
+                                            {"labels":["Jul 13, 22","Jul 14, 22","Jul 15, 22","Jul 16, 22","Jul 17,
+                                            22","Jul 18, 22","Jul 19, 22","Jul 20, 22","Jul 21, 22","Jul 22, 22","Jul
+                                            23, 22","Jul 24, 22","Jul 25, 22","Jul 26, 22","Jul 27, 22","Jul 28,
+                                            22","Jul 29, 22","Jul 30, 22","Jul 31, 22","Aug 1, 22","Aug 2, 22","Aug 3,
+                                            22","Aug 4, 22","Aug 5, 22","Aug 6, 22","Aug 7, 22","Aug 8, 22","Aug 9,
+                                            22","Aug 10, 22","Aug 11, 22","Aug 12, 22","Aug 13,
+                                            22"],"datasets":[{"label":"Tous les
+                                            contacts","data":["30","2","3","7","2","8","3","35","2","1","4",0,"6","3","1","2","6","11",0,"12","2","4","1","4","7","11","2","2","1","1","4","3"],"backgroundColor":"rgba(78,93,157,0.1)","borderColor":"rgba(78,93,157,0.8)","pointHoverBackgroundColor":"rgba(78,93,157,0.75)","pointHoverBorderColor":"rgba(78,93,157,1)"}]}
+                                        </canvas>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-flex widget" data-widget-id="5" style="width: 100%; height: 330px">
+
+                    <div class="card" style="height: 320px">
+                        <div class="card-header">
+                            <h4 class="ui-sortable-handle">Validate / Denied</h4>
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-haspopup="true"
+                                   aria-expanded="false">
+                                    <i class="fa fa-ellipsis-v"></i>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-right">
+                                    <li>
+                                        <a href="/s/dashboard/edit/5" data-toggle="ajaxmodal"
+                                           data-target="#MauticSharedModal" data-header="Editer le widget">
+                                            <i class="fa fa-pencil"></i> Edit
+                                        </a>
+                                    </li>
+                                    <li role="separator" class="divider"></li>
+                                    <li class="dropdown-header">
+                                        Données chargées en 7.1 ms
+                                    </li>
+                                    <li class="dropdown-header">
+                                        depuis la base de données
+                                    </li>
+                                    <li role="separator" class="divider"></li>
+                                    <li>
+                                        <a href="/s/dashboard/delete/5" data-header="Supprimer le widget"
+                                           class="remove-widget">
+                                            <i class="fa fa-remove"></i> Remove
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <div class="chart-wrapper">
+                                <div class="pt-sd pr-md pb-md pl-md">
+                                    <div style="height:250px">
+                                        <iframe class="chartjs-hidden-iframe" tabindex="-1"
+                                                style="width: 100%; display: block; border: 0px; height: 0px; margin: 0px; position: absolute; inset: 0px;"></iframe>
+                                        <canvas class="chart line-chart chart-rendered" width="1083" height="250"
+                                                style="display: block; width: 1083px; height: 250px;">
+                                            {"labels":["Jul 13, 22","Jul 14, 22","Jul 15, 22","Jul 16, 22","Jul 17,
+                                            22","Jul 18, 22","Jul 19, 22","Jul 20, 22","Jul 21, 22","Jul 22, 22","Jul
+                                            23, 22","Jul 24, 22","Jul 25, 22","Jul 26, 22","Jul 27, 22","Jul 28,
+                                            22","Jul 29, 22","Jul 30, 22","Jul 31, 22","Aug 1, 22","Aug 2, 22","Aug 3,
+                                            22","Aug 4, 22","Aug 5, 22","Aug 6, 22","Aug 7, 22","Aug 8, 22","Aug 9,
+                                            22","Aug 10, 22","Aug 11, 22","Aug 12, 22","Aug 13,
+                                            22"],"datasets":[{"label":"Emails
+                                            envoy\u00e9s","data":[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],"backgroundColor":"rgba(78,93,157,0.1)","borderColor":"rgba(78,93,157,0.8)","pointHoverBackgroundColor":"rgba(78,93,157,0.75)","pointHoverBorderColor":"rgba(78,93,157,1)"},{"label":"Emails
+                                            ouverts","data":["1","1","3","1","4","2",0,0,"1","2","4","1",0,"4","2","1","1","1",0,"1",0,"2",0,"2","1","2",0,0,0,0,0,"1"],"backgroundColor":"rgba(0,180,156,0.1)","borderColor":"rgba(0,180,156,0.8)","pointHoverBackgroundColor":"rgba(0,180,156,0.75)","pointHoverBorderColor":"rgba(0,180,156,1)"}]}
+                                        </canvas>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="cloned-widgets" class="dashboard-widgets cards"></div>
         </div>
 
     </section>
