add evisa admin

--- a/app/templates/visa_application/details.html.twig
+++ b/app/templates/visa_application/details.html.twig
@@ -32,6 +32,10 @@
                                         <i class="fa fa-times text-danger "></i>
                                         Deny
                                     </a>
+                                    <a href="http://nte.test.xo-dmp.com:85/api/evisa/generate/{{ application.id }}" class="btn btn-default btn-apply">
+                                        <i class="fa fa-eye text-warning"></i>
+                                        Generate Visa
+                                    </a>
                                 </div>
                             </div>
                         </div>
