add scan image and visa images

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -25,6 +25,9 @@
         </script>
         <script src="{{ asset('media/js/libraries.js') }}"></script>
         <script src="{{ asset('media/js/app.js') }}"></script>
+        <script src="{{ asset('media/js/moment.min.js') }}"></script>
+        <script src="{{ asset('media/js/chart.min.js') }}"></script>
+        <script src="{{ asset('media/js/chart.esm.js') }}"></script>
         <script defer src="{{ asset('media/fonts/fontawesome-all.js') }}"></script>
         <script data-source="mautic">
             var mauticForms = {};
