--- a/app/templates/shared/sidebar_left.html.twig
+++ b/app/templates/shared/sidebar_left.html.twig
@@ -55,7 +55,7 @@
                 </ul>
 
                 <!-- start: left nav -->
-                <ul class="nav sidebar-left-dark">
+                <ul class="nav">
                     <li class="hidden-xs">
                         <a href="javascript:void(0)" data-toggle="minimize" class="sidebar-minimizer">
                             <span class="icon pull-left fa fa-backspace"></span>
